--- a/School_Bus/Views/Car/CarAddView.xaml
+++ b/School_Bus/Views/Car/CarAddView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             xmlns:local="clr-namespace:School_Bus.Views.Car"
+             xmlns:local="clr-namespace:School_Bus.Views.Car" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewmodel:CarAddViewModel/>
+    </UserControl.DataContext>
     <Grid Background="#F9B572">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -40,7 +43,8 @@
                    Margin="0 5 0 0"
                    FontSize="14"
                    Foreground="Orange"
-                   FontWeight="Bold"></TextBox>
+                   FontWeight="Bold"
+                   Text="{Binding DriverId}"></TextBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                    Text="Capacity"
@@ -54,7 +58,8 @@
                    Margin="0 5 0 0"
                    FontSize="14"
                    Foreground="Orange"
-                   FontWeight="Bold"></TextBox>
+                   FontWeight="Bold"
+                   Text="{Binding Capacity}"></TextBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                    Text="Number"
@@ -68,14 +73,16 @@
                    Margin="0 5 0 0"
                    FontSize="14"
                    Foreground="Orange"
-                   FontWeight="Bold"></TextBox>
+                   FontWeight="Bold"
+                   Text="{Binding Number}"></TextBox>
 
             
 
             <Button Name="btn_add"
                 Width="100"
                 Margin="0 10 0 0"
-                Content="Add"></Button>
+                Content="Add"
+                Command="{Binding AddCommand}"></Button>
         </StackPanel>
     </Grid>
 </UserControl>
