--- a/School_Bus/Views/CreateRideView.xaml
+++ b/School_Bus/Views/CreateRideView.xaml
@@ -3,9 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:School_Bus.Views"
+             xmlns:local="clr-namespace:School_Bus.Views" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewmodel:CreateRideViewModel/>
+    </UserControl.DataContext>
     <Grid Background="LightYellow">
         <Grid.RowDefinitions>
             <RowDefinition Height="3*"></RowDefinition>
@@ -19,31 +22,32 @@
         <StackPanel Orientation="Vertical" Grid.Column="0" Margin="0 60 0 0">
             <StackPanel Margin="0 15 0 0">
                 <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Bus ID</TextBlock>
-                <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"  Margin="0 10 0 0"></TextBox>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}" Width="200"  Margin="0 10 0 0" Text="{Binding BusId}"></TextBox>
             </StackPanel>
             <StackPanel Margin="0 15 0 0">
                 
             </StackPanel>
             <StackPanel Margin="0 15 0 0">
                 <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Start Point</TextBlock>
-                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0" Text="{Binding StartPoint}"></TextBox>
             </StackPanel>
             <StackPanel Margin="0 15 0 0">
                 <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">End Point</TextBlock>
-                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0" Text="{Binding EndPoint}"></TextBox>
             </StackPanel>
         </StackPanel>
 
         <StackPanel Orientation="Vertical" Grid.Column="1" Margin="0 60 0 0">
             <StackPanel Margin="0 15 0 0">
                 <TextBlock HorizontalAlignment="Center" Margin="0 0 150 0" Style="{StaticResource MaterialDesignButtonTextBlock}" Foreground="Brown">Passangers</TextBlock>
-                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0"></TextBox>
+                <TextBox Style="{StaticResource MaterialDesignTextBox}"  Width="200"  Margin="0 10 0 0" Text="{Binding Passengers}"></TextBox>
                 <Button Grid.Row="0" 
                         Grid.Column="1"
                         Margin="0 20 0 0"
                         VerticalAlignment="Center" 
                         Width="100"
-                        Content="Add Ride">
+                        Content="Add Ride"
+                        Command="{Binding AddCommand}">
 
                 </Button>
             </StackPanel>
