--- a/School_Bus/Views/Parent/ParentAddView.xaml
+++ b/School_Bus/Views/Parent/ParentAddView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             xmlns:local="clr-namespace:School_Bus.Views.Parent"
+             xmlns:local="clr-namespace:School_Bus.Views.Parent" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewmodel:ParentAddViewModel/>
+    </UserControl.DataContext>
     <Grid Background="#F9B572">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -40,7 +43,8 @@
                        Margin="0 5 0 0"
                        FontSize="14"
                        Foreground="Orange"
-                       FontWeight="Bold"></TextBox>
+                       FontWeight="Bold"
+                       Text="{Binding FirstName}"></TextBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                        Text="Lastname"
@@ -54,7 +58,8 @@
                        Margin="0 5 0 0"
                        FontSize="14"
                        Foreground="Orange"
-                       FontWeight="Bold"></TextBox>
+                       FontWeight="Bold"
+                       Text="{Binding LastName}"></TextBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                        Text="Phone"
@@ -68,7 +73,8 @@
                        Margin="0 5 0 0"
                        FontSize="14"
                        Foreground="Orange"
-                       FontWeight="Bold"></TextBox>    
+                       FontWeight="Bold"
+                       Text="{Binding Phone}"></TextBox>    
 
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                        Text="Address"
@@ -82,12 +88,14 @@
                        Margin="0 5 0 0"
                        FontSize="14"
                        Foreground="Orange"
-                       FontWeight="Bold"></TextBox>
+                       FontWeight="Bold"
+                       Text="{Binding Address}"></TextBox>
 
             <Button Name="btn_add"
                     Width="100"
                     Margin="0 10 0 0"
-                    Content="Add"></Button>
+                    Content="Add"
+                    Command="{Binding AddCommand}"></Button>
         </StackPanel>
     </Grid>
 </UserControl>
