--- a/School_Bus/Views/Student/StudentView.xaml
+++ b/School_Bus/Views/Student/StudentView.xaml
@@ -7,6 +7,8 @@
              xmlns:local="clr-namespace:School_Bus.Views" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    
     <UserControl.DataContext>
         <viewmodel:StudentViewModel/>
     </UserControl.DataContext>
@@ -38,11 +40,12 @@
                          BorderBrush="Orange"
                          BorderThickness="0,0,0,1"                             
                          VerticalContentAlignment="Center"
-                         Margin="5,5,0,0"></TextBox>
+                         Margin="5,5,0,0"
+                         Text="{Binding Id}"></TextBox>
             </StackPanel>
             <Button Grid.Column="1"
                 Content="Search"
-                Command="{Binding LoginCommand}"
+                Command="{Binding SearchCommand}"
                 Style="{StaticResource parentButton}">
             </Button>
             <Button Grid.Column="2"
