--- a/School_Bus/Views/Driver/DriverAddView.xaml
+++ b/School_Bus/Views/Driver/DriverAddView.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
-        <viewmodel:DriverAddViewModel/>
+        <viewmodel:DriverViewModel/>
     </UserControl.DataContext>
     <Grid Background="#F9B572">
         <Grid.RowDefinitions>
