--- a/School_Bus/Views/Student/StudentAddView.xaml
+++ b/School_Bus/Views/Student/StudentAddView.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" BorderThickness="7" BorderBrush="Brown">
     <UserControl.DataContext>
-        <viewmodel:StudentAddViewModel/>
+        <viewmodel:StudentViewModel/>
     </UserControl.DataContext>
     
     <Grid Background="#F9B572">
