--- a/School_Bus/Views/Car/CarRemoveView.xaml
+++ b/School_Bus/Views/Car/CarRemoveView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             xmlns:local="clr-namespace:School_Bus.Views.Car"
+             xmlns:local="clr-namespace:School_Bus.Views.Car" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewmodel:CarViewModel/>
+    </UserControl.DataContext>
     <Grid Background="#F9B572">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -38,8 +41,9 @@
 
             </TextBlock>
             <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                  Margin="0 10 0 0"
-                  Background="LightYellow"></ComboBox>
+                      Margin="0 10 0 0"
+                      Background="LightYellow"
+                      ItemsSource="{Binding IdList}"></ComboBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
                    Text="Car Number"
@@ -47,17 +51,27 @@
                    Foreground="LightYellow"
                    FontSize="18"
                    Margin="0 20 0 0"></TextBlock>
-            <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                  Margin="0 10 0 0"
-                  Background="LightYellow"></ComboBox>
+            <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
+                       Background="LightYellow"
+                       Height="50"
+                       Margin="0 10 0 0"
+                       Text="{Binding Number}"></TextBlock>
 
-            <Button Width="100"
-                Margin="0 50 0 0"
-                Content="Remove"
-                Foreground="LightYellow"
-                FontWeight="Bold">
+            <StackPanel Orientation="Horizontal">
+                <Button Width="100"
+                        Margin="0 20 0 0"
+                        Content="Find"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding FindCommand}"></Button>
+                <Button Width="100"
+                        Margin="90 20 0 0"
+                        Content="Remove"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding RemoveCommand}"></Button>
+            </StackPanel>
 
-            </Button>
         </StackPanel>
 
 
