--- a/School_Bus/Views/Class/ClassRemoveView.xaml
+++ b/School_Bus/Views/Class/ClassRemoveView.xaml
@@ -4,9 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             xmlns:local="clr-namespace:School_Bus.Views"
+             xmlns:local="clr-namespace:School_Bus.Views" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="400">
+
+    <UserControl.DataContext>
+        <viewmodel:ClassViewModel/>
+    </UserControl.DataContext>
+    
     <Grid Background="#F9B572">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -39,7 +44,8 @@
             </TextBlock>
             <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
                       Margin="0 10 0 0"
-                      Background="LightYellow"></ComboBox>
+                      Background="LightYellow"
+                      ItemsSource="{Binding IdList}"></ComboBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
                        Text="Class Name"
@@ -47,17 +53,27 @@
                        Foreground="LightYellow"
                        FontSize="18"
                        Margin="0 20 0 0"></TextBlock>
-            <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                      Margin="0 10 0 0"
-                      Background="LightYellow"></ComboBox>
+            <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
+                       Background="LightYellow"
+                       Height="50"
+                       Margin="0 10 0 0"
+                       Text="{Binding ClassName}"></TextBlock>
 
-            <Button Width="100"
-                    Margin="0 50 0 0"
-                    Content="Remove"
-                    Foreground="LightYellow"
-                    FontWeight="Bold">
-                    
-            </Button>
+            <StackPanel Orientation="Horizontal">
+                <Button Width="100"
+                        Margin="0 20 0 0"
+                        Content="Find"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding FindCommand}"></Button>
+                <Button Width="100"
+                        Margin="90 20 0 0"
+                        Content="Remove"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding RemoveCommand}"></Button>
+            </StackPanel>
+
         </StackPanel>
 
 
