--- a/School_Bus/Views/Driver/DriverRemoveView.xaml
+++ b/School_Bus/Views/Driver/DriverRemoveView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
-             xmlns:local="clr-namespace:School_Bus.Views.Driver"
+             xmlns:local="clr-namespace:School_Bus.Views.Driver" xmlns:viewmodel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.DataContext>
+        <viewmodel:DriverViewModel/>
+    </UserControl.DataContext>
     <Grid Background="#F9B572">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -15,12 +18,12 @@
         </Grid.RowDefinitions>
 
         <Button x:Name="btnClose"
-    Style="{StaticResource controlButton}"
-    Tag="{StaticResource color4}"
-    Click="btnClose_Click"
-    HorizontalAlignment="Right"
-    VerticalAlignment="Bottom"
-    Margin="0  0  0  20"
+                    Style="{StaticResource controlButton}"
+                    Tag="{StaticResource color4}"
+                    Click="btnClose_Click"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Margin="0  0  0  20"
     >
             <fa:IconImage Icon="Xmark" Style="{StaticResource controlButtonIcon}"/>
         </Button>
@@ -38,8 +41,9 @@
 
             </TextBlock>
             <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
-          Margin="0 10 0 0"
-          Background="LightYellow"></ComboBox>
+                      Margin="0 10 0 0"
+                      Background="LightYellow"
+                      ItemsSource="{Binding IdList}"></ComboBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
            Text="Driver Name"
@@ -48,9 +52,10 @@
            FontSize="18"
            Margin="0 20 0 0"></TextBlock>
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
-               Background="LightYellow"
-               Height="50"
-               Margin="0 10 0 0"></TextBlock>
+                       Background="LightYellow"
+                       Height="50"
+                       Margin="0 10 0 0"
+                       Text="{Binding FirstName}"></TextBlock>
 
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
@@ -60,18 +65,27 @@
                FontSize="18"
                Margin="0 20 0 0"></TextBlock>
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
-               Background="LightYellow"
-               Height="50"
-               Margin="0 10 0 0"></TextBlock>
+                       Background="LightYellow"
+                       Height="50"
+                       Margin="0 10 0 0"
+                       Text="{Binding LastName}"></TextBlock>
+
+            <StackPanel Orientation="Horizontal">
+                <Button Width="100"
+                        Margin="0 20 0 0"
+                        Content="Find"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding FindCommand}"></Button>
+                <Button Width="100"
+                        Margin="90 20 0 0"
+                        Content="Remove"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding RemoveCommand}"></Button>
+            </StackPanel>
 
 
-            <Button Width="100"
-        Margin="0 20 0 0"
-        Content="Remove"
-        Foreground="LightYellow"
-        FontWeight="Bold">
-
-            </Button>
         </StackPanel>
 
 
