--- a/School_Bus/Views/Ride/RemoveRideView.xaml
+++ b/School_Bus/Views/Ride/RemoveRideView.xaml
@@ -7,6 +7,11 @@
              xmlns:local="clr-namespace:School_Bus.Views" xmlns:viewModel="clr-namespace:School_Bus.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.DataContext>
+        <viewModel:RidesViewModel/>
+    </UserControl.DataContext>
+    
     <Grid Background="#F9B572">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -38,8 +43,9 @@
 
             </TextBlock>
             <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
-                  Margin="0 10 0 0"
-                  Background="LightYellow"></ComboBox>
+                      Margin="0 10 0 0"
+                      Background="LightYellow"
+                      ItemsSource="{Binding IdList}"></ComboBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
                    Text="StartPoint"
@@ -50,7 +56,8 @@
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                        Background="LightYellow"
                        Height="50"
-                       Margin="0 10 0 0"></TextBlock>   
+                       Margin="0 10 0 0"
+                       Text="{Binding StartPoint}"></TextBlock>   
 
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
@@ -62,16 +69,23 @@
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                        Background="LightYellow"
                        Height="50"
-                       Margin="0 10 0 0"></TextBlock>
+                       Margin="0 10 0 0"
+                       Text="{Binding EndPoint}"></TextBlock>
 
-
-            <Button Width="100"
-                Margin="0 20 0 0"
-                Content="Remove"
-                Foreground="LightYellow"
-                FontWeight="Bold">
-
-            </Button>
+            <StackPanel Orientation="Horizontal">
+                <Button Width="100"
+                        Margin="0 20 0 0"
+                        Content="Find"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding FindCommand}"></Button>
+                <Button Width="100"
+                        Margin="90 20 0 0"
+                        Content="Remove"
+                        Foreground="LightYellow"
+                        FontWeight="Bold"
+                        Command="{Binding RemoveCommand}"></Button>
+            </StackPanel>
         </StackPanel>
 
 
