--- a/School_Bus/Views/Student/StudentView.xaml
+++ b/School_Bus/Views/Student/StudentView.xaml
@@ -70,7 +70,8 @@
             <DataGrid ColumnWidth="*"
               Background="Transparent"
               BorderThickness="0"
-                      ItemsSource="{Binding StudentList,NotifyOnSourceUpdated=True}">
+              ItemsSource="{Binding StudentList}"
+              AutoGenerateColumns="False">
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
                         <Setter Property="Background" Value="Transparent"/>
@@ -80,7 +81,26 @@
                         <Setter Property="FontSize" Value="15"/>
                     </Style>
                 </DataGrid.ColumnHeaderStyle>
-
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False" />
+                    <DataGridTextColumn Header="Name" Binding="{Binding Firstname}" IsReadOnly="False" />
+                    <DataGridTextColumn Header="Surname" Binding="{Binding Lastname}" IsReadOnly="False" />
+                    <DataGridTextColumn Header="Class Id" Binding="{Binding ClassId}" IsReadOnly="False" />
+                    <DataGridTextColumn Header="Bus Id" Binding="{Binding BusId}" IsReadOnly="False" />
+                    <DataGridTextColumn Header="Parent Id" Binding="{Binding ParentId}" IsReadOnly="False" />
+                    
+                    
+                    
+                    <DataGridTemplateColumn Header="Action">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button Content="Update" HorizontalContentAlignment="Center"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                </DataGrid.Columns>
             </DataGrid>
         </Border>
     </Grid>
