--- a/School_Bus/Views/Driver/DriverRemoveView.xaml
+++ b/School_Bus/Views/Driver/DriverRemoveView.xaml
@@ -43,7 +43,8 @@
             <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
                       Margin="0 10 0 0"
                       Background="LightYellow"
-                      ItemsSource="{Binding IdList}"></ComboBox>
+                      ItemsSource="{Binding IdList}"
+                      SelectedItem="{Binding Id}"></ComboBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
            Text="Driver Name"
