--- a/School_Bus/Views/Ride/RemoveRideView.xaml
+++ b/School_Bus/Views/Ride/RemoveRideView.xaml
@@ -45,7 +45,8 @@
             <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
                       Margin="0 10 0 0"
                       Background="LightYellow"
-                      ItemsSource="{Binding IdList}"></ComboBox>
+                      ItemsSource="{Binding IdList}"
+                      SelectedItem="{Binding Id}"></ComboBox>
 
             <TextBlock Style="{StaticResource MaterialDesignBody2TextBlock}"
                    Text="StartPoint"
